more flexible org display and footer overlap fix

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,11 +3,13 @@
 
 @import "{{ site.theme }}";
 
+/* Global */
 a:hover, a:focus {
   font-weight: unset;
   text-decoration: underline;
 }
 
+/* Callouts */
 .callout {
   background-color: lightgrey;
   color: #2f2f2f;
@@ -18,6 +20,11 @@ a:hover, a:focus {
 
 .callout a {
   font-weight: bold;
+}
+
+/* Licensing */
+.licensing img {
+  float: right;
 }
 
 /* Partcipants */
@@ -38,6 +45,7 @@ name {
 
 organization {
   margin: 1em;
+  text-align: center;
   width: 200px;
 }
 
@@ -45,4 +53,28 @@ organizations {
   align-items: center;
   display: flex;
   flex-flow: row wrap;
+  justify-content: center;
+}
+
+/* Wide Layout */
+.wide .wrapper {
+  width: 100%;
+}
+.wide header {
+  float: none;
+  position: relative;
+  width: 100%;
+}
+
+.wide section {
+  float: none;
+  margin: 2em;
+  width: 100%;
+}
+
+.wide footer {
+  bottom: auto;
+  float: none;
+  position: relative;
+  width: 100%;
 }
